--- a/sources/masters/Pretension2-Regular.ufo/fontinfo.plist
+++ b/sources/masters/Pretension2-Regular.ufo/fontinfo.plist
@@ -55,7 +55,7 @@
   <key>openTypeHheaLineGap</key>
   <integer>-0</integer>
   <key>openTypeNameDesigner</key>
-  <string>Rasmus Andersson, Cristiano Sobral</string>
+  <string>Rasmus Andersson, Kil Hyung-jin, Cristiano Sobral</string>
   <key>openTypeNameDesignerURL</key>
   <string>https://rsms.me/</string>
   <key>openTypeNameLicense</key>
@@ -63,7 +63,7 @@
   <key>openTypeNameLicenseURL</key>
   <string>http://scripts.sil.org/OFL</string>
   <key>openTypeNameManufacturer</key>
-  <string>rsms, Cristiano Sobral</string>
+  <string>rsms, orioncactus, cssobral2013</string>
   <key>openTypeNameManufacturerURL</key>
   <string>https://rsms.me/</string>
   <key>openTypeNamePreferredFamilyName</key>
@@ -71,7 +71,7 @@
   <key>openTypeNamePreferredSubfamilyName</key>
   <string>Regular</string>
   <key>openTypeNameVersion</key>
-  <string>Version 3.043</string>
+  <string>Version 3.044</string>
   <key>openTypeOS2CodePageRanges</key>
   <array>
     <integer>0</integer>
@@ -207,7 +207,7 @@
   <key>versionMajor</key>
   <integer>3</integer>
   <key>versionMinor</key>
-  <integer>43</integer>
+  <integer>44</integer>
   <key>xHeight</key>
   <integer>1118</integer>
 </dict>
